--- a/forside.html
+++ b/forside.html
@@ -41,9 +41,9 @@
 <div class="wrapper">
     <img src="images/samarbeid.jpg" alt="">
     <div class="text-box">
-        <h2>Skolefest!</h2>
-        <p>Fredag 28.april arrangerer skolen året skolefest! Billetter kan kjøpes hver dag i midttimen.</p>
-        <p>Festen begynner 20:00 og det vil bli servert snacks, drikke og god stemning!</p> 
+        <h2>Elevrådsvalg!</h2>
+        <p>Fredag 28.april er det også elevrådsvalg på skolen!</p>
+        <p>Alle klassene stemmer individuelt i klasserommene sine kl 11:30.</p> 
     </div>
 </div>
 
