--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <h1>Amalie Skram VGS</h1>
 
 <ul class="navigation">
-    <li><a href="../Brukerstøtte-prosjekt/omoss.html">Om oss</a></li>
-    <li><a href="../Brukerstøtte-prosjekt/personvern.html">Personvern</a></li>
-    <li><a href="../Brukerstøtte-prosjekt/faq.html">FAQ</a></li>
-    <li><a href="../Brukerstøtte-prosjekt/kontakt.html">Kontakt oss</a></li>
+    <li><a href="../Prosjekt-oppgave/omoss.html">Om oss</a></li>
+    <li><a href="../Prosjekt-oppgave/personvern.html">Personvern</a></li>
+    <li><a href="../Prosjekt-oppgave/faq.html">FAQ</a></li>
+    <li><a href="../Prosjekt-oppgave/kontakt.html">Kontakt oss</a></li>
 </ul>
 
 
@@ -50,7 +50,6 @@
 </div>
 
 
-<script src="app.js"></script>
     
 </body>
 </html>
