--- a/omoss.html
+++ b/omoss.html
@@ -14,10 +14,10 @@
         <h1 class="logo"><span></span></h1> <!--Navnet på siden i meny baren-->
        
     <ul class="navigation">
-        <li><a href="../Brukerstøtte-prosjekt/forside.html">Hjem</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/personvern.html">Personvern</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/faq.html">FAQ</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/kontakt.html">Kontakt oss</a></li>
+        <li><a href="../Prosjekt-oppgave/index.html">Hjem</a></li>
+        <li><a href="../Prosjekt-oppgave/personvern.html">Personvern</a></li>
+        <li><a href="../Prosjekt-oppgave/faq.html">FAQ</a></li>
+        <li><a href="../Prosjekt-oppgave/kontakt.html">Kontakt oss</a></li>
     </ul>
        
     </div>
