--- a/personvern.html
+++ b/personvern.html
@@ -12,10 +12,10 @@
     <h1>Personvern (GDPR)</h1>
 
     <ul class="navigation">
-        <li><a href="../Brukerstøtte-prosjekt/forside.html">Hjem</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/omoss.html">Om oss</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/faq.html">FAQ</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/kontakt.html">Kontakt oss</a></li>
+        <li><a href="../Prosjekt-oppgave/index.html">Hjem</a></li>
+        <li><a href="../Prosjekt-oppgave/omoss.html">Om oss</a></li>
+        <li><a href="../Prosjekt-oppgave/faq.html">FAQ</a></li>
+        <li><a href="../Prosjekt-oppgave/kontakt.html">Kontakt oss</a></li>
     </ul>
 
 <main>
