--- a/kontakt.html
+++ b/kontakt.html
@@ -11,10 +11,10 @@
     
 <h1>Kontakt oss</h1>
     <ul class="navigation">
-        <li><a href="../Brukerstøtte-prosjekt/forside.html">Hjem</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/omoss.html">Om oss</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/personvern.html">Personvern</a></li>
-        <li><a href="../Brukerstøtte-prosjekt/faq.html">FAQ</a></li>
+        <li><a href="../Prosjekt-oppgave/index.html">Hjem</a></li>
+        <li><a href="../Prosjekt-oppgave/omoss.html">Om oss</a></li>
+        <li><a href="../Prosjekt-oppgave/personvern.html">Personvern</a></li>
+        <li><a href="../Prosjekt-oppgave/faq.html">FAQ</a></li>
     </ul>
 
 
